Makefile: Avoid some tedious repeptition in the makefile while expanding to build all systems files.
scripts/DataTags.rb: Add a Tag object to represent all that matters about a single Tag. Change the loading to build a hash of {names => Tag}. Provide [] to return a named Tag object.

scripts/systems-yaml-to-mediawiki.rb: Change to using the new tag support rather than hard-coding tags in the source.

scripts/systems-tags.yaml: Q-bus is used by MIPS as well as VAX, so allow 'all' to use it. I-inrush is used so allow for it.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -241,7 +241,7 @@
   - io
 - BUS-Qbus:
   - Q-bus
-  - vax
+  - all
   - io
 - BUS-vaxbi:
   - VAXBI
@@ -357,6 +357,10 @@
   - power
 - I-max:
   - I(max)
+  - all
+  - power
+- I-inrush:
+  - I(inrush)
   - all
   - power
 - Power:
