Various PDP-11 updates.
scripts/systems-tags.yaml: The PDP-11/60 has UWCS. It even has ECS and DCS so add those (but only for pdp11).

info/pdp11.info: Verify some information.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -214,7 +214,18 @@
 - UWCS:
   - User Writable Control Store
   - User Writable Control Store
-  - vax
+  - - vax
+    - pdp11
+  - cpu_details
+- ECS:
+  - Extended Control Store
+  - User Microprogram Control Store ROM
+  - pdp11
+  - cpu_details
+- DCS:
+  - Diagnostic Control Store
+  - Microcode ROM hardware diagnostic aid
+  - pdp11
   - cpu_details
 - Cache:
   - Cache
