Add Processor Generation to some PDP-11 systems.
info/refs.info: New reference: 'PDP-11 Processor Handbook. 11/84,11/44,11/24'

scripts/systems-tags.yaml: Add a new tag for Generation.

info/pdp11.info: Add Generation data from p1-3.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -18,6 +18,11 @@
   - all
   - summary
   - required
+- Generation:
+  - Technology generation
+  - Technology generation
+  - pdp11
+  - summary
 - FRS-date:
   - FRS date
   - First revenue ship date
