Further information from 'PDP-11 Processor Handbook. 11/84,11/44,11/24'.
scripts/systems-tags.yaml: Add 'Relative-performance' for PDP-11 systems.

info/pdp11.info: More info from PDP-11 UNIBUS Proceso Handbook.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -420,6 +420,11 @@
   - Ethernet support details
   - all
   - io
+- Relative-performance:
+  - Relative performance
+  - Performance relative to another system
+  - pdp11
+  - performance
 - VUPs:
   - VUPs
   - VAX Units of Performance
