Further updates from DEC_0002 EK/.
scripts/systems-tags.yaml: Some MIPS systems use MDM so allow for that.

info/mips.info:
info/vax.info: Various updates.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -74,7 +74,8 @@
 - OS-support-MDM:
   - OS support (MDM)
   - Range of MDM releases that support this system
-  - vax
+  - - vax
+    - decmips
   - summary
 - OS-support-ELN:
   - OS support (ELN)
