Allow OS-support-VMS to explicitly specify "early" and "end" dates
A new script is being planned which will build a list of VMS support details
for various systems. That requires changing the current OS-support-VMS tag
from free text to a more structured format so that first and last OS support
can be teased out programmatically. This is slightly complicated by the fact
that some systems had support in an early version, then a one or more versions
where the system was unsupported and then full support in a later version.
For example, the MicroVAX 3100 Model 85 was supported in OpenVMS V5.5-2H4,
but not in OpenVMS V6.1 before finally receiving full support and ongoing
support in OpenVMS V6.1.

Build in support for these new tags and make use of them in vax.info.
The output of the infovax script has been verified not to change (apart
from generation dates). The tag support does not yet generate full
correct references for each of the individual parts. A few TODO entries
have been left in vax.info to sort out when full support is implemented.

scripts/systems-tags.yaml: Allow for new system tags (OS-support-VMS-early/-end)

info/vax.info: Use the new tags.

scripts/systems-yaml-to-infobox-mediawiki.rb: Roll reference handling into
a class to make future changes simpler. Begin handling of new OS-support-VMS
tags, but without worrying about references yet.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -66,7 +66,21 @@
   - summary
 - OS-support-VMS:
   - OS support (VMS)
-  - Range of VMS versions that support this system
+  - First version of VMS of a continuous range until the final version that supports this system
+  - - vax
+    - alpha
+    - itanium
+  - summary
+- OS-support-VMS-end:
+  - OS support (VMS)
+  - Final VMS version that supports this system
+  - - vax
+    - alpha
+    - itanium
+  - summary
+- OS-support-VMS-early:
+  - OS support (VMS)
+  - An early version of VMS that supports the system but followed by a gap in support
   - - vax
     - alpha
     - itanium
