Add reference data from ULTRIX V4.1 RN and a DCU
Add data from ULTRIX V4.1 Release Notes (which includes details of
support started in ULTRIX V4.0).

Add data from Digital Customer Updated dated 1992-01-31, which details
systems supported by DEC OSF/1 V1.0.

Allow the OS release script to accept "DU" for decmips. Also change the
OS display name to "DEC OSF/1" in the DEC MIPS case as that is the only
possible name (by the time it was renamed to Digital UNIX, all MIPS
support had been dropped).

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -111,7 +111,8 @@
 - OS-support-DU:
   - OS support (Digital UNIX)
   - Range of Digital Unix or Tru64 versions that support this system
-  - alpha
+  - - decmips
+    - alpha
   - summary
 - OS-support-SYSV:
   - OS support (AT&T System V)
