Tru64 updates plus some misc
Various updates, mostly connected with Tru64 support.
I found documentation that states that some systems ended support with
Tru64 UNIX V5.1, so "OS-support-DU-end" is now a thing and, as hoped, it
worked without any fuss.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -114,6 +114,12 @@
   - - decmips
     - alpha
   - summary
+- OS-support-DU-end:
+  - OS support (Digital UNIX)
+  - Final version of  Digital Unix or Tru64 that supports this system
+  - - decmips
+    - alpha
+  - summary
 - OS-support-SYSV:
   - OS support (AT&T System V)
   - Range of System V versions that suppor this system
