Add data from a pair of Professional 380 System technical manuals
Add data relating to the Pro 380, 350 and 325.
Add data relating to the RD50, RD51 and RD52.
Allow pdp11 entries to mention the CTI bus.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -457,6 +457,11 @@
   - MCA slot details
   - decpc
   - io
+- BUS-CTI:
+  - CTI
+  - CTI slot details
+  - pdp11
+  - io
 - LAN-support:
   - LAN support
   - Ethernet support details
@@ -550,7 +555,7 @@
   - power
 - Power:
   - Power
-  - POower consumption
+  - Power consumption
   - all
   - power
 - Heat-dissipation:
