Expand the entries for the VT55 and VT240 (and also VT241)
While adding extra info for the VT55, VT240 and VT241, I added some '**document' entries too. This tripped over some implementation issues, which needed to be fixed.

scripts/DataTerminalsInfo.rb: The pubs structure needs to be available to the handler for Terminal. info_filename needs to be passed down for error messages.

scripts/terminals-tags.yaml: New tags: Phosphor and Copier

info/terminals.info: Extra info for the VT55, VT240 and VT241 ...

info/refs.info: ... and the references required.

--- a/scripts/terminals-tags.yaml
+++ b/scripts/terminals-tags.yaml
@@ -340,7 +340,17 @@
   - all
   - summary
 - VT105-compatibility:
-  - VT105compatibility
-  - VT105compatibility
+  - VT105 compatibility
+  - VT105 compatibility
+  - all
+  - summary
+- Phosphor:
+  - Phosphor
+  - Phosphor
+  - all
+  - summary
+- Copier:
+  - Copier
+  - Copier
   - all
   - summary
