scripts/storage-tags.yaml: The 'Sys-name' tage must specify 'all', not 'storage'

--- a/scripts/storage-tags.yaml
+++ b/scripts/storage-tags.yaml
@@ -7,7 +7,7 @@
 - Sys-name:
   - System name
   - System description
-  - storage
+  - all
 - Html-target:
   - HTML target
   - HTML target (unused)
