--- a/scripts/terminals-tags.yaml
+++ b/scripts/terminals-tags.yaml
@@ -7,7 +7,7 @@
 - Sys-name:
   - System name
   - System description
-  - storage
+  - all
 - Html-target:
   - HTML target
   - HTML target (unused)
