Add some information about the Digital PC 3010
info/pc.info: Information about the PC 3010.

scripts/systems-tags.yaml: BUS-PCI-or-ISA is now used by 'decpc' too.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -444,7 +444,8 @@
 - BUS-PCI-or-ISA:
   - PCI or ISA
   - Details of slots that may be PCI or ISA
-  - alpha
+  - - alpha
+    - decpc
   - io
 - BUS-ISA:
   - ISA
