scripts/storage-tags.yaml: ... and remember to commit the new tag!!

--- a/scripts/storage-tags.yaml
+++ b/scripts/storage-tags.yaml
@@ -564,6 +564,11 @@
   - Recording technology
   - all
   - summary
+- Recording-medium:
+  - Recording medium
+  - Recording medium
+  - all
+  - summary
 - Repositioning-time:
   - Repositioning time
   - Repositioning time
