Add some DECsystem 58x0 info
info/mips.info: Allow MIPs as a performace measure ...

scripts/systems-tags.yaml: ... and use it for the DECsystem 5800

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -479,6 +479,12 @@
   - - vax
     - decmips
   - performance
+- MIPs:
+  - MIPs
+  - Millions of Instructions Per Second
+  - - vax
+    - decmips
+  - performance
 - SPECmarks:
   - SPECmarks
   - SPECmark details
