Add AlphaServer 1000 4/200 info from JAN 1995 SOC
scripts/systems-tags.yaml: ... add "I-nominal" ...

info/alpha.info: ... so thet the AlphaServer 1000 4/200 can use it.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -555,6 +555,11 @@
   - Maximum current drawn
   - all
   - power
+- I-nominal:
+  - I(nom.)
+  - Nominal current
+  - all
+  - power
 - I-inrush:
   - I(inrush)
   - Maximum inrush current
