Add AlphaVME 2100 data from DEC 1995 SOC Supplement
info/alpha.info: add the data for the Alpha VME 2100 4/00 and 4/275 systems ...

scripts/systems-tags.yaml: ... and add the BUS-VME tag that is now required.

--- a/scripts/systems-tags.yaml
+++ b/scripts/systems-tags.yaml
@@ -469,6 +469,11 @@
   - - alpha
     - PC
   - io
+- BUS-VME:
+  - VME
+  - VME slot details
+  - - alpha
+  - io
 - LAN-support:
   - LAN support
   - Ethernet support details
