Start to add boards from Network Comms 1989-01
Start to work through 'Networks and Communications Buyer's Guide 1989 January - June'. the first applicable section is ethernet interface boards. Where possible expand on the information by finding technical documents.

info/boards.info: Start to add the data ...

scripts/boards-tags.yaml: ... and update the tags as new ones are required.

info/pubs-refs.txt: Fix a missing title.

info/refs.info: Update references in passing.

--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -145,6 +145,21 @@
   - Bus interface to which the board connects
   - all
   - all
+- Num-Interfaces:
+  - Number of interface ports
+  - Number of interface ports
+  - all
+  - all
+- Ethernet-connection:
+  - Ethernet connection
+  - Ethernet connection style (AUI, BNC, RJ45)
+  - all
+  - all
+- Peak-throughput:
+  - Peak throughput
+  - Peak throughput
+  - all
+  - all
 - AC-bus-load:
   - AC-bus-load
   - AC-bus-load
@@ -163,5 +178,15 @@
 - Positive-12V-current:
   - +12V current
   - +12V current
+  - all
+  - all
+- Negative-15V-current:
+  - -15V current
+  - -15V current
+  - all
+  - all
+- CPU:
+  - CPU
+  - CPU
   - all
   - all
