More updates from Networks & Comms 1989
info/boards.info: Finish the interface boards section ...

info/refs.info: ... and add a reference along the way.

scripts/boards-tags.yaml: Add "-12V" as an option.

--- a/scripts/boards-tags.yaml
+++ b/scripts/boards-tags.yaml
@@ -1,3 +1,4 @@
+
 ---
 - Not-Allowed:
   - Not Allowed
@@ -178,6 +179,11 @@
 - Positive-12V-current:
   - +12V current
   - +12V current
+  - all
+  - all
+- Negative-12V-current:
+  - -12V current
+  - -12V current
   - all
   - all
 - Negative-15V-current:
